<resources>
    <string name="app_name">UserStory</string>
    <string name="register">Register</string>
    <string name="email_error">Email is not valid</string>
    <string name="password_error">Minimum 8 character</string>
    <string name="name">Name</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="welcome_text">Welcome to UserStory App\nplease login or register first!</string>
    <string name="logout">Logout</string>
    <string name="camera" translatable="false">CAMERA</string>
    <string name="camerax" translatable="false">CAMERAX</string>
    <string name="gallery">GALLERY</string>
    <string name="capture">capture</string>
    <string name="change_camera">change_camera</string>
</resources>