<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.newstory.NewStoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:minWidth="300dp"
            android:minHeight="500dp"
            app:srcCompat="@drawable/baseline_image_24" />

        <EditText
            android:id="@+id/description_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/camera_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                app:layout_constraintBottom_toBottomOf="@+id/camerax_btn"
                app:layout_constraintEnd_toStartOf="@+id/camerax_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/camerax_btn" />

            <Button
                android:id="@+id/camerax_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/camerax"
                app:layout_constraintBottom_toTopOf="@+id/upload_btn"
                app:layout_constraintEnd_toStartOf="@+id/gallery_btn"
                app:layout_constraintStart_toEndOf="@+id/camera_btn" />

            <Button
                android:id="@+id/gallery_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gallery"
                app:layout_constraintBottom_toBottomOf="@+id/camerax_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/camerax_btn"
                app:layout_constraintTop_toTopOf="@+id/camerax_btn" />

            <Button
                android:id="@+id/upload_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>